# agones-playground

./: Cargo.toml  Dockerfile  README.md  allocate.sh  skaffold.yaml  values.yml
k8s-agones/: 1_fleet.yml  2_scaler.yml
src/: main.rs
