[package]
name = "agexample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
env_logger = "0.9.1"
log = "0.4.17"
agones = { git = 'https://github.com/googleforgames/agones.git', branch = 'release-1.26.0' }
actix-web = "4.2.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_millis = "0.1.1"
rand = "0.8.5"